# FastApiTraining

./: crud.py  items_views.py  main.py  pyproject.toml
alembic/versions/: 2025_03_22_1526-374dffc3f7a9_create_products_table.py  2025_03_22_1550-4e4f798b3b0d_create_users_table.py  2025_03_22_1723-40565a97d631_create_posts_table.py  2025_03_23_1847-4938de47fdad_create_profile_table.py  2025_03_25_1244-6262f1c9bbd9_create_order_table.py  2025_03_25_1329-730550560972_order_product_association_table.py  2025_03_26_1129-263c3bd41df3_add_count_column_to_order_product_.py  2025_03_26_1246-5a865f3ec09d_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  views.py
auth/: README.md  utils.py
core/: config.py
core/models/: db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
leetcode/: test1.py  test13.py  test14.py  test20.py  test21.py  test26.py  test35.py  test58.py  test69.py  test83.py  test88.py  test9.py  test94.py
users/: schemas.py  views.py
yandex/: test.py  test12.py  test12_2.py  test14.py  test16.py  test18.py  test19.py  test2.py  test21.py  test31.py  test40.py  test42.py  test43.py  test48.py  test52.py  test6.py  test7.py
